Added new method to control whether ViewManager and ViewManager2 double-buffer when rendering. bug 49743 a=roc+moz@cs.cmu.edu r=peterl@netscape.com