view/src/nsViewManager2.h
@@ -157,6 +157,7 @@ public:
  
   NS_IMETHOD IsCachingWidgetChanges(PRBool* aCaching);
   NS_IMETHOD CacheWidgetChanges(PRBool aCache);
+  NS_IMETHOD AllowDoubleBuffering(PRBool aDoubleBuffer);
 protected:
   virtual ~nsViewManager2();
 
@@ -369,6 +370,7 @@ public:
 protected:
   nscoord           mX;
   nscoord           mY;
+  PRBool            mAllowDoubleBuffering;
 
 #ifdef NS_VM_PERF_METRICS
   MOZ_TIMER_DECLARE(mWatch) //  Measures compositing+paint time for current document
